# acephalous-assembler

./: .coverage  .gitignore  .pylintrc  CHANGELOG.md  DEVELOPMENT.md  POETRY_QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  broadcast.sh  build_and_flash.sh  cog.toml  config.env.debian-cc-overseer-minipc  config.env.example  install_status_events.jsonl  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh
.coordination/: COORDINATOR-HANDOFF.txt  COORDINATOR-SUMMARY.txt  CSA-COMPATIBILITY.md  FINAL-BLOCKERS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INDEX.md  NEXT-ASSESSMENT.md  SHELL_DEPRECATION_PLAN.md  handoff-cc-overseer-minipc-20260423-101558.json  handoff-cc-overseer-minipc-20260423-111751.json  handoff-cc-overseer-minipc-20260423-123759.json  handoff-homeassistant-20260423-110240.json  handoff-v2.example.json  initial-state.md  repo-state.txt
.github/: CODEOWNERS
debian/: README-DEBIAN.md  build_and_flash.sh  config.env.example  setup.sh
haos/: README-HAOS.md  build_and_flash.sh  config.env.example  setup.sh
lib/: _00-common-functions.sh  _01-install-deps.sh  _02-generate-password-hash.sh  _03-prepare-haos-workdir.sh  _03-prepare-workdir.sh  _04-render-autoinstall.py  _04-render-template.py  _05-patch-grub-debian.py  _05-patch-grub.py  _06-rebuild-md5.py  _07-build-iso.sh  _08-flash-image.sh  _09-download-debian-iso.sh  _09-download-haos-image.sh  _10-finalize-haos-image.sh  _99-generate-handoff.py  _991-start-status-server.sh  _992-install-status-server.py  start-status-server.sh  validate-paths.sh
tests/: README.md  (+15 more)
(+24 files in other folders)
